2015-11-09  Carl Hetherington  <cth@carlh.net>

	* Keep same frame visible after trimming content start (#737).

	* Trim frames after the current one with "trim after current", leaving
	the current frame in (#737).

2015-11-08  Carl Hetherington  <cth@carlh.net>

	* Fix bad layout in the audio tab (#738).

	* Allow configuration of SubRip subtitle colour and outlines.

2015-11-06  Carl Hetherington  <cth@carlh.net>

	* Sort cinemas in KDM dialog and standalone creator (#726).

2015-11-06  c.hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

2015-11-06  Carl Hetherington  <cth@carlh.net>

	* Make single-frame image sources adjust their notional
	frame rate to that of the DCP (#714).

2015-11-05  Carl Hetherington  <cth@carlh.net>

	* Correct time display when previewing multi-reel DCP content.

2015-11-05  c.hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2015-11-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.0 released.

2015-11-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.4.18 released.

2015-11-04  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Version 2.4.17 released.

2015-11-04  Carl Hetherington  <cth@carlh.net>

	* Version 2.4.16 released.

2015-11-03  Carl Hetherington  <cth@carlh.net>

	* Fix error when previewing DCP content with added subtitles (#736).

	* Fix crash with multi-reel DCP content.

	* Updated fr_FR translation from Thierry Journet.

	* Updated ru_RU translation from Igor Voytovich.

	* Updated nl_NL translation from Rob van Nieuwkerk.

2015-11-02  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Fix incorrect preview rendering of italic subtitles (#728).

2015-10-30  c.hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

	* Fix non-update of timeline when reels setup changes (#735).

2015-10-29  Carl Hetherington  <cth@carlh.net>
